# data-structures-and-algorithms

./: CMakeLists.txt  array_boilerplate.h  boilerplate.h  boilerplatetester.h  main.cpp  simpleboilerplate.h
abstract-data-types/: BTree.h  Deque.h  Dictionairy.h  Queue.h  Stack.h
contiguous/: Array.h
linked/: List.h
